Updating cc base image in bazel example
Co-Authored-By: Chanseok Oh <chanseok@google.com>

--- a/examples/cc/BUILD
+++ b/examples/cc/BUILD
@@ -7,7 +7,7 @@ load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 
 container_image(
     name = "hello",
-    base = "//cc:cc_debian9",
+    base = "//cc:cc",
     entrypoint = ["./hello"],
     files = [":bin/hello"],
 )
