--- a/base/BUILD
+++ b/base/BUILD
@@ -124,8 +124,8 @@ alias(
 )
 
 alias(
-    name = "static-nonroot",
-    actual = ":static-nonroot_debian9",
+    name = "static_nonroot",
+    actual = ":static_nonroot_debian9",
 )
 
 alias(
@@ -134,8 +134,8 @@ alias(
 )
 
 alias(
-    name = "base-nonroot",
-    actual = ":base-nonroot_debian9",
+    name = "base_nonroot",
+    actual = ":base_nonroot_debian9",
 )
 
 alias(
@@ -144,6 +144,6 @@ alias(
 )
 
 alias(
-    name = "debug-nonroot",
-    actual = ":debug-nonroot_debian9",
+    name = "debug_nonroot",
+    actual = ":debug_nonroot_debian9",
 )
