--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,16 +14,16 @@ steps:
 
     bazel run --host_force_python=PY2 //base:static_debian9
     bazel run --host_force_python=PY2 //base:static_debian10
-    bazel run --host_force_python=PY2 //base:static-nonroot_debian9
-    bazel run --host_force_python=PY2 //base:static-nonroot_debian10
+    bazel run --host_force_python=PY2 //base:static_nonroot_debian9
+    bazel run --host_force_python=PY2 //base:static_nonroot_debian10
     bazel run --host_force_python=PY2 //base:base_debian9
     bazel run --host_force_python=PY2 //base:base_debian10
-    bazel run --host_force_python=PY2 //base:base-nonroot_debian9
-    bazel run --host_force_python=PY2 //base:base-nonroot_debian10
+    bazel run --host_force_python=PY2 //base:base_nonroot_debian9
+    bazel run --host_force_python=PY2 //base:base_nonroot_debian10
     bazel run --host_force_python=PY2 //base:debug_debian9
     bazel run --host_force_python=PY2 //base:debug_debian10
-    bazel run --host_force_python=PY2 //base:debug-nonroot_debian9
-    bazel run --host_force_python=PY2 //base:debug-nonroot_debian10
+    bazel run --host_force_python=PY2 //base:debug_nonroot_debian9
+    bazel run --host_force_python=PY2 //base:debug_nonroot_debian10
 
     bazel run --host_force_python=PY2 //cc:cc_debian9
     bazel run --host_force_python=PY2 //cc:cc_debian10
@@ -40,21 +40,21 @@ steps:
     docker tag bazel/base:static_debian9          gcr.io/$PROJECT_ID/static:${COMMIT_SHA}
     docker tag bazel/base:static_debian9          gcr.io/$PROJECT_ID/static-debian9:${COMMIT_SHA}
     docker tag bazel/base:static_debian10         gcr.io/$PROJECT_ID/static-debian10:${COMMIT_SHA}
-    docker tag bazel/base:static-nonroot_debian9  gcr.io/$PROJECT_ID/static:nonroot
-    docker tag bazel/base:static-nonroot_debian9  gcr.io/$PROJECT_ID/static-debian9:nonroot
-    docker tag bazel/base:static-nonroot_debian10 gcr.io/$PROJECT_ID/static-debian10:nonroot
+    docker tag bazel/base:static_nonroot_debian9  gcr.io/$PROJECT_ID/static:nonroot
+    docker tag bazel/base:static_nonroot_debian9  gcr.io/$PROJECT_ID/static-debian9:nonroot
+    docker tag bazel/base:static_nonroot_debian10 gcr.io/$PROJECT_ID/static-debian10:nonroot
     docker tag bazel/base:base_debian9            gcr.io/$PROJECT_ID/base:${COMMIT_SHA}
     docker tag bazel/base:base_debian9            gcr.io/$PROJECT_ID/base-debian9:${COMMIT_SHA}
     docker tag bazel/base:base_debian10           gcr.io/$PROJECT_ID/base-debian10:${COMMIT_SHA}
-    docker tag bazel/base:base-nonroot_debian9    gcr.io/$PROJECT_ID/base:nonroot
-    docker tag bazel/base:base-nonroot_debian9    gcr.io/$PROJECT_ID/base-debian9:nonroot
-    docker tag bazel/base:base-nonroot_debian10   gcr.io/$PROJECT_ID/base-debian10:nonroot
+    docker tag bazel/base:base_nonroot_debian9    gcr.io/$PROJECT_ID/base:nonroot
+    docker tag bazel/base:base_nonroot_debian9    gcr.io/$PROJECT_ID/base-debian9:nonroot
+    docker tag bazel/base:base_nonroot_debian10   gcr.io/$PROJECT_ID/base-debian10:nonroot
     docker tag bazel/base:debug_debian9           gcr.io/$PROJECT_ID/base:debug
     docker tag bazel/base:debug_debian9           gcr.io/$PROJECT_ID/base-debian9:debug
     docker tag bazel/base:debug_debian10          gcr.io/$PROJECT_ID/base-debian10:debug
-    docker tag bazel/base:debug-nonroot_debian9   gcr.io/$PROJECT_ID/base:debug-nonroot
-    docker tag bazel/base:debug-nonroot_debian9   gcr.io/$PROJECT_ID/base-debian9:debug-nonroot
-    docker tag bazel/base:debug-nonroot_debian10  gcr.io/$PROJECT_ID/base-debian10:debug-nonroot
+    docker tag bazel/base:debug_nonroot_debian9   gcr.io/$PROJECT_ID/base:debug-nonroot
+    docker tag bazel/base:debug_nonroot_debian9   gcr.io/$PROJECT_ID/base-debian9:debug-nonroot
+    docker tag bazel/base:debug_nonroot_debian10  gcr.io/$PROJECT_ID/base-debian10:debug-nonroot
 
     docker tag bazel/cc:cc_debian9     gcr.io/$PROJECT_ID/cc:${COMMIT_SHA}
     docker tag bazel/cc:cc_debian9     gcr.io/$PROJECT_ID/cc-debian9:${COMMIT_SHA}
@@ -159,15 +159,15 @@ steps:
     set -o xtrace
     docker tag bazel/experimental/python3:python3_debian9          gcr.io/$PROJECT_ID/python3:latest
     docker tag bazel/experimental/python3:python3_debian9          gcr.io/$PROJECT_ID/python3-debian9:latest
-    docker tag bazel/experimental/python3:python3_nonroot_debian9  gcr.io/$PROJECT_ID/python3-debian9:nonroot
-    docker tag bazel/experimental/python3:python3_nonroot_debian9  gcr.io/$PROJECT_ID/python3:nonroot
     docker tag bazel/experimental/python3:python3_debian10         gcr.io/$PROJECT_ID/python3-debian10:latest
+    docker tag bazel/experimental/python3:python3_nonroot_debian9  gcr.io/$PROJECT_ID/python3:nonroot
+    docker tag bazel/experimental/python3:python3_nonroot_debian9  gcr.io/$PROJECT_ID/python3-debian9:nonroot
     docker tag bazel/experimental/python3:python3_nonroot_debian10 gcr.io/$PROJECT_ID/python3-debian10:nonroot
     docker tag bazel/experimental/python3:debug_debian9            gcr.io/$PROJECT_ID/python3:debug
-    docker tag bazel/experimental/python3:debug_nonroot_debian9    gcr.io/$PROJECT_ID/python3:debug-nonroot
     docker tag bazel/experimental/python3:debug_debian9            gcr.io/$PROJECT_ID/python3-debian9:debug
-    docker tag bazel/experimental/python3:debug_nonroot_debian9    gcr.io/$PROJECT_ID/python3-debian9:debug-nonroot
     docker tag bazel/experimental/python3:debug_debian10           gcr.io/$PROJECT_ID/python3-debian10:debug
+    docker tag bazel/experimental/python3:debug_nonroot_debian9    gcr.io/$PROJECT_ID/python3:debug-nonroot
+    docker tag bazel/experimental/python3:debug_nonroot_debian9    gcr.io/$PROJECT_ID/python3-debian9:debug-nonroot
     docker tag bazel/experimental/python3:debug_nonroot_debian10   gcr.io/$PROJECT_ID/python3-debian10:debug-nonroot
 
     docker tag bazel/experimental/python2.7:python27_debian9  gcr.io/$PROJECT_ID/python2.7:latest
@@ -189,29 +189,29 @@ steps:
 
 
 images:
-  - 'gcr.io/$PROJECT_ID/static-debian9:${COMMIT_SHA}'
   - 'gcr.io/$PROJECT_ID/static:${COMMIT_SHA}'
-  - 'gcr.io/$PROJECT_ID/static-debian10:${COMMIT_SHA}'
-  - 'gcr.io/$PROJECT_ID/static-debian9:nonroot'
   - 'gcr.io/$PROJECT_ID/static:nonroot'
+  - 'gcr.io/$PROJECT_ID/static-debian9:${COMMIT_SHA}'
+  - 'gcr.io/$PROJECT_ID/static-debian9:nonroot'
+  - 'gcr.io/$PROJECT_ID/static-debian10:${COMMIT_SHA}'
   - 'gcr.io/$PROJECT_ID/static-debian10:nonroot'
-  - 'gcr.io/$PROJECT_ID/base-debian9:${COMMIT_SHA}'
   - 'gcr.io/$PROJECT_ID/base:${COMMIT_SHA}'
-  - 'gcr.io/$PROJECT_ID/base-debian10:${COMMIT_SHA}'
-  - 'gcr.io/$PROJECT_ID/base-debian9:nonroot'
   - 'gcr.io/$PROJECT_ID/base:nonroot'
-  - 'gcr.io/$PROJECT_ID/base-debian10:nonroot'
-  - 'gcr.io/$PROJECT_ID/base-debian9:debug'
   - 'gcr.io/$PROJECT_ID/base:debug'
-  - 'gcr.io/$PROJECT_ID/base-debian10:debug'
-  - 'gcr.io/$PROJECT_ID/base-debian9:debug-nonroot'
   - 'gcr.io/$PROJECT_ID/base:debug-nonroot'
+  - 'gcr.io/$PROJECT_ID/base-debian9:${COMMIT_SHA}'
+  - 'gcr.io/$PROJECT_ID/base-debian9:nonroot'
+  - 'gcr.io/$PROJECT_ID/base-debian9:debug'
+  - 'gcr.io/$PROJECT_ID/base-debian9:debug-nonroot'
+  - 'gcr.io/$PROJECT_ID/base-debian10:${COMMIT_SHA}'
+  - 'gcr.io/$PROJECT_ID/base-debian10:nonroot'
+  - 'gcr.io/$PROJECT_ID/base-debian10:debug'
   - 'gcr.io/$PROJECT_ID/base-debian10:debug-nonroot'
-  - 'gcr.io/$PROJECT_ID/cc-debian9:${COMMIT_SHA}'
   - 'gcr.io/$PROJECT_ID/cc:${COMMIT_SHA}'
-  - 'gcr.io/$PROJECT_ID/cc-debian10:${COMMIT_SHA}'
-  - 'gcr.io/$PROJECT_ID/cc-debian9:debug'
   - 'gcr.io/$PROJECT_ID/cc:debug'
+  - 'gcr.io/$PROJECT_ID/cc-debian9:${COMMIT_SHA}'
+  - 'gcr.io/$PROJECT_ID/cc-debian9:debug'
+  - 'gcr.io/$PROJECT_ID/cc-debian10:${COMMIT_SHA}'
   - 'gcr.io/$PROJECT_ID/cc-debian10:debug'
   - 'gcr.io/$PROJECT_ID/java:latest'
   - 'gcr.io/$PROJECT_ID/java:8'
@@ -245,23 +245,23 @@ images:
   - 'gcr.io/$PROJECT_ID/java-debian10/jetty:java11'
   - 'gcr.io/$PROJECT_ID/java-debian10/jetty:debug'
   - 'gcr.io/$PROJECT_ID/java-debian10/jetty:java11-debug'
-  - 'gcr.io/$PROJECT_ID/python3-debian9:latest'
-  - 'gcr.io/$PROJECT_ID/python3-debian9:nonroot'
   - 'gcr.io/$PROJECT_ID/python3:latest'
   - 'gcr.io/$PROJECT_ID/python3:nonroot'
-  - 'gcr.io/$PROJECT_ID/python3-debian10:latest'
-  - 'gcr.io/$PROJECT_ID/python3-debian10:nonroot'
-  - 'gcr.io/$PROJECT_ID/python3-debian9:debug'
-  - 'gcr.io/$PROJECT_ID/python3-debian9:debug-nonroot'
   - 'gcr.io/$PROJECT_ID/python3:debug'
   - 'gcr.io/$PROJECT_ID/python3:debug-nonroot'
+  - 'gcr.io/$PROJECT_ID/python3-debian9:latest'
+  - 'gcr.io/$PROJECT_ID/python3-debian9:nonroot'
+  - 'gcr.io/$PROJECT_ID/python3-debian9:debug'
+  - 'gcr.io/$PROJECT_ID/python3-debian9:debug-nonroot'
+  - 'gcr.io/$PROJECT_ID/python3-debian10:latest'
+  - 'gcr.io/$PROJECT_ID/python3-debian10:nonroot'
   - 'gcr.io/$PROJECT_ID/python3-debian10:debug'
   - 'gcr.io/$PROJECT_ID/python3-debian10:debug-nonroot'
-  - 'gcr.io/$PROJECT_ID/python2.7-debian9:latest'
   - 'gcr.io/$PROJECT_ID/python2.7:latest'
-  - 'gcr.io/$PROJECT_ID/python2.7-debian10:latest'
-  - 'gcr.io/$PROJECT_ID/python2.7-debian9:debug'
   - 'gcr.io/$PROJECT_ID/python2.7:debug'
+  - 'gcr.io/$PROJECT_ID/python2.7-debian9:latest'
+  - 'gcr.io/$PROJECT_ID/python2.7-debian9:debug'
+  - 'gcr.io/$PROJECT_ID/python2.7-debian10:latest'
   - 'gcr.io/$PROJECT_ID/python2.7-debian10:debug'
   - 'gcr.io/$PROJECT_ID/nodejs:latest'
   - 'gcr.io/$PROJECT_ID/nodejs:debug'
