--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -150,12 +150,12 @@ steps:
     bazel run --host_force_python=PY2 //experimental/dotnet:dotnet_debian10
     bazel run --host_force_python=PY2 //experimental/dotnet:debug_debian10
 
-    bazel run --host_force_python=PY2 //experimental/dotnet_core_aspnet:dotnet_core_aspnet
-    bazel run --host_force_python=PY2 //experimental/dotnet_core_aspnet:debug
-    bazel run --host_force_python=PY2 //experimental/dotnet_core_runtime:dotnet_core_runtime
-    bazel run --host_force_python=PY2 //experimental/dotnet_core_runtime:debug
-    bazel run --host_force_python=PY2 //experimental/dotnet_core_sdk:dotnet_core_sdk
-    bazel run --host_force_python=PY2 //experimental/dotnet_core_sdk:debug
+    bazel run --host_force_python=PY2 //experimental/dotnet_core_aspnet:dotnet_core_aspnet_debian9
+    bazel run --host_force_python=PY2 //experimental/dotnet_core_aspnet:debug_debian9
+    bazel run --host_force_python=PY2 //experimental/dotnet_core_runtime:dotnet_core_runtime_debian9
+    bazel run --host_force_python=PY2 //experimental/dotnet_core_runtime:debug_debian9
+    bazel run --host_force_python=PY2 //experimental/dotnet_core_sdk:dotnet_core_sdk_debian9
+    bazel run --host_force_python=PY2 //experimental/dotnet_core_sdk:debug_debian9
 
 - name: gcr.io/cloud-builders/docker
   entrypoint: sh
@@ -189,17 +189,17 @@ steps:
     docker tag bazel/experimental/dotnet:debug_debian9   gcr.io/$PROJECT_ID/dotnet-debian9:debug
     docker tag bazel/experimental/dotnet:debug_debian10  gcr.io/$PROJECT_ID/dotnet-debian10:debug
 
-    docker tag bazel/experimental/dotnet_core_aspnet:dotnet_core_aspnet  gcr.io/$PROJECT_ID/dotnet/core/aspnet:latest
-    docker tag bazel/experimental/dotnet_core_aspnet:dotnet_core_aspnet  gcr.io/$PROJECT_ID/dotnet/core/aspnet:3.1
-    docker tag bazel/experimental/dotnet_core_aspnet:debug               gcr.io/$PROJECT_ID/dotnet/core/aspnet:debug
+    docker tag bazel/experimental/dotnet_core_aspnet:dotnet_core_aspnet_debian9  gcr.io/$PROJECT_ID/dotnet/core/aspnet:latest
+    docker tag bazel/experimental/dotnet_core_aspnet:dotnet_core_aspnet_debian9  gcr.io/$PROJECT_ID/dotnet/core/aspnet:3.1
+    docker tag bazel/experimental/dotnet_core_aspnet:debug_debian9               gcr.io/$PROJECT_ID/dotnet/core/aspnet:debug
 
-    docker tag bazel/experimental/dotnet_core_runtime:dotnet_core_runtime  gcr.io/$PROJECT_ID/dotnet/core/runtime:latest
-    docker tag bazel/experimental/dotnet_core_runtime:dotnet_core_runtime  gcr.io/$PROJECT_ID/dotnet/core/runtime:3.1
-    docker tag bazel/experimental/dotnet_core_runtime:debug                gcr.io/$PROJECT_ID/dotnet/core/runtime:debug
+    docker tag bazel/experimental/dotnet_core_runtime:dotnet_core_runtime_debian9  gcr.io/$PROJECT_ID/dotnet/core/runtime:latest
+    docker tag bazel/experimental/dotnet_core_runtime:dotnet_core_runtime_debian9  gcr.io/$PROJECT_ID/dotnet/core/runtime:3.1
+    docker tag bazel/experimental/dotnet_core_runtime:debug_debian9                gcr.io/$PROJECT_ID/dotnet/core/runtime:debug
 
-    docker tag bazel/experimental/dotnet_core_sdk:dotnet_core_sdk  gcr.io/$PROJECT_ID/dotnet/core/sdk:latest
-    docker tag bazel/experimental/dotnet_core_sdk:dotnet_core_sdk  gcr.io/$PROJECT_ID/dotnet/core/sdk:3.1
-    docker tag bazel/experimental/dotnet_core_sdk:debug            gcr.io/$PROJECT_ID/dotnet/core/sdk:debug
+    docker tag bazel/experimental/dotnet_core_sdk:dotnet_core_sdk_debian9  gcr.io/$PROJECT_ID/dotnet/core/sdk:latest
+    docker tag bazel/experimental/dotnet_core_sdk:dotnet_core_sdk_debian9  gcr.io/$PROJECT_ID/dotnet/core/sdk:3.1
+    docker tag bazel/experimental/dotnet_core_sdk:debug_debian9            gcr.io/$PROJECT_ID/dotnet/core/sdk:debug
 
 images:
   - 'gcr.io/$PROJECT_ID/static-debian9:${COMMIT_SHA}'
