--- a/examples/dotnet_core/Dockerfile
+++ b/examples/dotnet_core/Dockerfile
@@ -10,13 +10,7 @@ RUN dotnet restore \
     --runtime linux-x64
 
 
-# FROM gcr.io/distroless/dotnet_core_runtime:dotnet_core_runtime_debian10 as runtime
-# FROM gcr.io/distroless/dotnet/core:3.1 as runtime # Aim for this container image tag.
-
-# Use below local images for local development.
-FROM bazel/experimental/dotnet_core_runtime:dotnet_core_runtime_debian10 as runtime
-# FROM bazel/experimental/dotnet_core_runtime:debug_debian10 as runtime
-LABEL maintainer=""
+FROM gcr.io/distroless/dotnet/core:3.1 as runtime
 
 WORKDIR /app
 COPY --from=build /app/out .
