--- a/experimental/dotnet/BUILD
+++ b/experimental/dotnet/BUILD
@@ -11,6 +11,8 @@ DISTRO_PACKAGES = {
     "_debian10": packages_debian10,
 }
 
+DOTNET_VARIANTS = ("", "_core_aspnet", "_core_runtime", "_core_sdk")
+
 # distribution-specific deb dependencies
 DISTRO_DEBS = {
     "_debian9": [
@@ -27,59 +29,63 @@ DISTRO_DEBS = {
     ],
 }
 
-[[container_image(
-    name = ("dotnet" if (not mode) else mode[1:]) + distro_suffix,
-    base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + distro_suffix,
-    debs = [
-        DISTRO_PACKAGES[distro_suffix]["libgssapi-krb5-2"],
-        DISTRO_PACKAGES[distro_suffix]["liblttng-ust0"],
-        DISTRO_PACKAGES[distro_suffix]["libunwind8"],
-        DISTRO_PACKAGES[distro_suffix]["libuuid1"],
-        DISTRO_PACKAGES[distro_suffix]["zlib1g"],
-        DISTRO_PACKAGES[distro_suffix]["curl"],
-        DISTRO_PACKAGES[distro_suffix]["libcomerr2"],
-        DISTRO_PACKAGES[distro_suffix]["libidn2-0"],
-        DISTRO_PACKAGES[distro_suffix]["libk5crypto3"],
-        DISTRO_PACKAGES[distro_suffix]["libkrb5-3"],
-        DISTRO_PACKAGES[distro_suffix]["libldap-2.4-2"],
-        DISTRO_PACKAGES[distro_suffix]["libldap-common"],
-        DISTRO_PACKAGES[distro_suffix]["libsasl2-2"],
-        DISTRO_PACKAGES[distro_suffix]["libnghttp2-14"],
-        DISTRO_PACKAGES[distro_suffix]["libpsl5"],
-        DISTRO_PACKAGES[distro_suffix]["librtmp1"],
-        DISTRO_PACKAGES[distro_suffix]["libssh2-1"],
-        DISTRO_PACKAGES[distro_suffix]["libkeyutils1"],
-        DISTRO_PACKAGES[distro_suffix]["libkrb5support0"],
-        DISTRO_PACKAGES[distro_suffix]["libgnutls30"],
-        DISTRO_PACKAGES[distro_suffix]["libgmp10"],
-        DISTRO_PACKAGES[distro_suffix]["libhogweed4"],
-        DISTRO_PACKAGES[distro_suffix]["libidn11"],
-        DISTRO_PACKAGES[distro_suffix]["libnettle6"],
-        DISTRO_PACKAGES[distro_suffix]["libp11-kit0"],
-        DISTRO_PACKAGES[distro_suffix]["libffi6"],
-        DISTRO_PACKAGES[distro_suffix]["libtasn1-6"],
-        DISTRO_PACKAGES[distro_suffix]["libsasl2-modules-db"],
-        DISTRO_PACKAGES[distro_suffix]["libdb5.3"],
-        DISTRO_PACKAGES[distro_suffix]["libgcrypt20"],
-        DISTRO_PACKAGES[distro_suffix]["libgpg-error0"],
-        DISTRO_PACKAGES[distro_suffix]["libacl1"],
-        DISTRO_PACKAGES[distro_suffix]["libattr1"],
-        DISTRO_PACKAGES[distro_suffix]["libselinux1"],
-        DISTRO_PACKAGES[distro_suffix]["libpcre3"],
-        DISTRO_PACKAGES[distro_suffix]["libbz2-1.0"],
-        DISTRO_PACKAGES[distro_suffix]["liblzma5"],
-    ] + [DISTRO_PACKAGES[distro_suffix][deb] for deb in DISTRO_DEBS[distro_suffix]],
-    entrypoint = [
-        #"/opt/dotnet/dotnet",
-    ],
-    symlinks = {
-        "/usr/bin/dotnet": "/opt/dotnet/dotnet",
-    },
-    tars = ["@dotnet//:tar"],
-) for mode in [
-    "",
-    ":debug",
-]] for distro_suffix in DISTRO_SUFFIXES]
+[[
+    container_image(
+        name = "dotnet" + dotnet_variant + ("" if (not mode) else mode) + distro_suffix,
+        base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + distro_suffix,
+        debs = [
+            DISTRO_PACKAGES[distro_suffix]["libgssapi-krb5-2"],
+            DISTRO_PACKAGES[distro_suffix]["liblttng-ust0"],
+            DISTRO_PACKAGES[distro_suffix]["libunwind8"],
+            DISTRO_PACKAGES[distro_suffix]["libuuid1"],
+            DISTRO_PACKAGES[distro_suffix]["zlib1g"],
+            DISTRO_PACKAGES[distro_suffix]["curl"],
+            DISTRO_PACKAGES[distro_suffix]["libcomerr2"],
+            DISTRO_PACKAGES[distro_suffix]["libidn2-0"],
+            DISTRO_PACKAGES[distro_suffix]["libk5crypto3"],
+            DISTRO_PACKAGES[distro_suffix]["libkrb5-3"],
+            DISTRO_PACKAGES[distro_suffix]["libldap-2.4-2"],
+            DISTRO_PACKAGES[distro_suffix]["libldap-common"],
+            DISTRO_PACKAGES[distro_suffix]["libsasl2-2"],
+            DISTRO_PACKAGES[distro_suffix]["libnghttp2-14"],
+            DISTRO_PACKAGES[distro_suffix]["libpsl5"],
+            DISTRO_PACKAGES[distro_suffix]["librtmp1"],
+            DISTRO_PACKAGES[distro_suffix]["libssh2-1"],
+            DISTRO_PACKAGES[distro_suffix]["libkeyutils1"],
+            DISTRO_PACKAGES[distro_suffix]["libkrb5support0"],
+            DISTRO_PACKAGES[distro_suffix]["libgnutls30"],
+            DISTRO_PACKAGES[distro_suffix]["libgmp10"],
+            DISTRO_PACKAGES[distro_suffix]["libhogweed4"],
+            DISTRO_PACKAGES[distro_suffix]["libidn11"],
+            DISTRO_PACKAGES[distro_suffix]["libnettle6"],
+            DISTRO_PACKAGES[distro_suffix]["libp11-kit0"],
+            DISTRO_PACKAGES[distro_suffix]["libffi6"],
+            DISTRO_PACKAGES[distro_suffix]["libtasn1-6"],
+            DISTRO_PACKAGES[distro_suffix]["libsasl2-modules-db"],
+            DISTRO_PACKAGES[distro_suffix]["libdb5.3"],
+            DISTRO_PACKAGES[distro_suffix]["libgcrypt20"],
+            DISTRO_PACKAGES[distro_suffix]["libgpg-error0"],
+            DISTRO_PACKAGES[distro_suffix]["libacl1"],
+            DISTRO_PACKAGES[distro_suffix]["libattr1"],
+            DISTRO_PACKAGES[distro_suffix]["libselinux1"],
+            DISTRO_PACKAGES[distro_suffix]["libpcre3"],
+            DISTRO_PACKAGES[distro_suffix]["libbz2-1.0"],
+            DISTRO_PACKAGES[distro_suffix]["liblzma5"],
+        ] + [DISTRO_PACKAGES[distro_suffix][deb] for deb in DISTRO_DEBS[distro_suffix]],
+        entrypoint = [
+            #"/opt/dotnet/dotnet",
+        ],
+        symlinks = {
+            "/usr/bin/dotnet": "/opt/dotnet/dotnet",
+        },
+        tars = ["@dotnet" + dotnet_variant + "//:tar"],
+    )
+    for mode in [
+        "",
+        "_debug",
+    ]
+    for distro_suffix in DISTRO_SUFFIXES
+] for dotnet_variant in DOTNET_VARIANTS]
 
 # Provide aliases so the default images use debian9
 alias(
@@ -89,5 +95,5 @@ alias(
 
 alias(
     name = "debug",
-    actual = ":debug_debian9",
+    actual = ":dotnet_debug_debian9",
 )
