Update to Bazel 3.2.0; Update all Bazel dependencies
This updates basically all the tools used to develop distroless to
the latest versions. This doesn't seem to change anything, but some
of these things were quite old. Some minor tweaks were needed to get
the build to work. Some notable changes:

* We don't seem to need --host_force_python=PY2 unless the build
  environment has a broken version of Python3. Using the default
  (which I think is Python3 in recent versions of Bazel) seems to
  work. We should be using that now, since Python2 is now deprecated.

* Run CI on Ubuntu 18.04 instead of 14.04. This is a fairly recent
  LTS release.

--- a/base/BUILD
+++ b/base/BUILD
@@ -107,6 +107,7 @@ load("//cacerts:cacerts.bzl", "cacerts")
 go_binary(
     name = "check_certs",
     srcs = ["testdata/check_certs.go"],
+    goarch = "amd64",
     # Test image is linux based
     goos = "linux",
     pure = "on",
