--- a/experimental/busybox/BUILD
+++ b/experimental/busybox/BUILD
@@ -6,7 +6,7 @@ load(":commands.bzl", "BUSYBOX_COMMANDS")
 # For convenience, rename busybox-x86_64 to busybox.
 genrule(
     name = "busybox_tar",
-    srcs = ["@busybox//file:downloaded"],
+    srcs = ["@busybox//file"],
     outs = ["busybox.tar"],
     cmd = "mkdir busybox; cp $(<) busybox/busybox; cd busybox; \
            for cmd in %s; do \
