--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 dist: bionic
-sudo: required
+# Not technically required but suppresses 'Ruby' in Job status message.
+language: go
 
 install:
   - export PATH=$PATH:$HOME/bin && mkdir -p $HOME/bin
