--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,12 @@
-# trusty beta image has jdk8, gcc4.8.4
-dist: trusty
-sudo: required
+dist: bionic
 # Not technically required but suppresses 'Ruby' in Job status message.
 language: go
-python:
-  - "2.7"
-os:
-  - linux
-
-go:
-  - 1.10.x
-
-jdk:
-  - oraclejdk8
 
 install:
   - export PATH=$PATH:$HOME/bin && mkdir -p $HOME/bin
   # install bazelisk as bazel to install the appropriate bazel version
   - wget https://github.com/bazelbuild/bazelisk/releases/download/v1.5.0/bazelisk-linux-amd64 && chmod +x bazelisk-linux-amd64 && mv bazelisk-linux-amd64 $HOME/bin/bazel
-  - wget https://github.com/bazelbuild/buildtools/releases/download/0.22.0/buildifier && chmod +x buildifier && mv buildifier $HOME/bin/
+  - wget https://github.com/bazelbuild/buildtools/releases/download/3.2.0/buildifier && chmod +x buildifier && mv buildifier $HOME/bin/
   - sudo pip install pylint
 
 script:
