--- a/examples/dotnet/BUILD
+++ b/examples/dotnet/BUILD
@@ -11,15 +11,10 @@ load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
     base = "//experimental/dotnet:dotnet" + suffix,
     cmd = [
         "dotnet",
-        "/bin/Release/netcoreapp" + version + "/hello.dll",
+        "/bin/Release/netcoreapp2.0/hello.dll",
     ],
     files = [":bin"],
-) for (version, suffix) in (
-    ("2.0", ""),
-    ("3.1", "_core_aspnet_debian10"),
-    ("3.1", "_core_runtime_debian10"),
-    ("3.1", "_core_sdk_debian10"),
-)]
+) for suffix in ("", "_core_aspnet_debian10", "_core_runtime_debian10", "_core_sdk_debian10")]
 
 load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 
