--- a/examples/dotnet/testdata/hello_core_runtime_debian10.yaml
+++ b/examples/dotnet/testdata/hello_core_runtime_debian10.yaml
@@ -1,5 +1,9 @@
 schemaVersion: "1.0.0"
 commandTests:
   - name: hello
-    command: ['dotnet', '/bin/Release/netcoreapp3.1/hello.dll']
-    expectedOutput: ['Hello World']
+    command: ['dotnet', '/bin/Release/netcoreapp2.0/hello.dll']
+    expectedError:
+      - 'The following frameworks were found:'
+      - '3\.1\.4 at \[/opt/dotnet/shared/Microsoft.NETCore.App\]'
+    exitCode: 150
+
