Add extraction for c locale. Fixes #253

--- a/java/BUILD
+++ b/java/BUILD
@@ -6,6 +6,7 @@ load("@io_bazel_rules_docker//java:image.bzl", "java_image")
 load("@package_bundle//file:packages.bzl", "packages", "versions")
 load("@package_bundle_debian10//file:packages.bzl", packages_debian10 = "packages", versions_debian10 = "versions")
 load("//cacerts:java.bzl", "cacerts_java")
+load("//locale:locale.bzl", "locale")
 load("//java:jre_ver.bzl", "jre_ver")
 
 DISTRO_SUFFIXES = ("_debian9", "_debian10")
@@ -19,6 +20,14 @@ DISTRO_VERSIONS = {
     "_debian9": versions,
     "_debian10": versions_debian10,
 }
+
+[locale(
+    name = "locale_java" + distro_suffix,
+    deb = DISTRO_PACKAGES[distro_suffix]["libc-bin"],
+) for distro_suffix in [
+    "_debian9",
+    "_debian10",
+]]
 
 [cacerts_java(
     name = "cacerts_java" + distro_suffix,
@@ -42,12 +51,14 @@ DISTRO_VERSIONS = {
         DISTRO_PACKAGES[distro_suffix]["libexpat1"],
         DISTRO_PACKAGES[distro_suffix]["libfontconfig1"],
         DISTRO_PACKAGES[distro_suffix]["libuuid1"],
-        DISTRO_PACKAGES[distro_suffix]["libc-bin"],
     ],
     env = {
         "LANG": "C.UTF-8",
     },
-    tars = [":cacerts_java" + distro_suffix],
+    tars = [
+        ":cacerts_java" + distro_suffix,
+        ":locale_java" + distro_suffix,
+    ],
 ) for mode in [
     "",
     "_debug",
